Added services app. Added tests for profiles app. Updated documentation.
