# misc/documentation/swagger.yaml
@@ -222,6 +222,136 @@ paths:
                   value: '{"non_field_errors":["A user with that username already exists."]}'
                 unique_email:
                   value: '{"non_field_errors":["User with this email already exist"]}'
+  /profile/:
+    put:
+      description: Updates profile data.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/profile_body'
+            examples:
+              blank_body:
+                value: '{}'
+              max_length:
+                value: |-
+                  {
+                      "first_name": "firstnamefirstnamefirstnamefirstnamefirstnamefirstnamefirstnamefirstnamefirstnamefirstnamefirstname",
+                      "last_name": "lastnamelastnamelastnamelastnamelastnamelastnamelastnamelastnamelastnamelastnamelastnamelastnamelastnamelastname",
+                      "user_profile": {
+                          "bio": "Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)Some bio =)",
+                          "location": "Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location Some Location "
+                      }
+                  }
+              isanum_fields:
+                value: "{\n    \"first_name\": \"first_name\",\n    \"last_name\": \"last_name\",\n    \"user_profile\": {\n        \n    }\n}"
+              blank_fields:
+                value: "{\n    \"first_name\": \"\",\n    \"last_name\": \"\",\n    \"user_profile\": {\n        \n    }\n}"
+              wrong_data_types:
+                value: "{\n    \"first_name\": [],\n    \"last_name\": [],\n    \"user_profile\": {\n        \n    }\n}"
+              success:
+                value: |-
+                  {
+                      "first_name": "firstname",
+                      "last_name": "lastname",
+                      "user_profile": {
+                          "bio": "Some bio =)",
+                          "location": "Some Location"
+                      }
+                  }
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_200'
+              examples:
+                success:
+                  value: '{"first_name":"firstname","last_name":"lastname","user_profile":{"bio":"Some bio =)","location":"Some Location"}}'
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_400'
+              examples:
+                max_length_fields:
+                  value: '{"first_name":["Ensure this field has no more than 64 characters."],"last_name":["Ensure this field has no more than 64 characters."],"user_profile":{"bio":["Ensure this field has no more than 256 characters."],"location":["Ensure this field has no more than 128 characters."]}}'
+                isalnum_fields:
+                  value: '{"first_name":["This field should contain only alphanumeric character"],"last_name":["This field should contain only alphanumeric character"]}'
+                blank_fields:
+                  value: '{"first_name":["This field may not be blank."],"last_name":["This field may not be blank."]}'
+                wrong_data_types:
+                  value: '{"first_name":["Not a valid string."],"last_name":["Not a valid string."]}'
+                blank_body:
+                  value: '{"first_name":["This field is required."],"last_name":["This field is required."],"user_profile":["This field is required."]}'
+        "401":
+          description: Permission denied
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_401'
+              examples:
+                Permission denied:
+                  value: '{"detail":"Authentication credentials were not provided."}'
+      servers:
+        - url: http://127.0.0.1:8000
+    patch:
+      description: Edits profile image (pass url to image inside cloud).
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/profile_body_1'
+            examples:
+              blank_body:
+                value: '{}'
+              blank_field:
+                value: |-
+                  {
+                      "image": ""
+                  }
+              wrong_data_type:
+                value: |-
+                  {
+                      "image": []
+                  }
+              success:
+                value: '{"image": "https://cloudinary.com/image_url"}'
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/profile_body_1'
+              examples:
+                success:
+                  value: '{"image":"https://cloudinary.com/image_url"}'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_400_1'
+              examples:
+                wrong_data_type:
+                  value: '{"image":["Not a valid string."]}'
+                blank_field:
+                  value: '{"image":["This field may not be blank."]}'
+                required_field:
+                  value: '{"image":["This field is required."]}'
+        "401":
+          description: Permission denied
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_401'
+              examples:
+                Permission denied:
+                  value: '{"detail":"Authentication credentials were not provided."}'
+  
       servers:
       - url: http://127.0.0.1:8000
     servers:
@@ -556,6 +686,27 @@ components:
         refresh:
           type: string
         message:
+          type: string
+    profile_body:
+      type: object
+      properties:
+        image:
+          type: string
+        last_name:
+          type: array
+          items:
+            type: string
+        user_profile:
+          type: object
+          properties: { }
+        first_name:
+          type: array
+          items:
+            type: string
+    profile_body_1:
+      type: object
+      properties:
+        image:
           type: string
     users_reset_password_body:
       type: object
